--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
       transform: translateX(100%);
       opacity: 0;
     }
+
     to {
       transform: translateX(0);
       opacity: 1;
@@ -25,3 +26,8 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  g .recharts-layer text{
+    display: none;
+  }
+}
