--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  g .recharts-layer text {
+  #circle-chart-category .recharts-layer tspan {
     display: none;
   }
   
